--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2><p>I am a <span class="pro">project management consultant</span></p></h2>
 
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img src="images/OldPMP.png" alt="mountain-img">
   </div>
   <div class="middle-container">
     <div class="profile">
