--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="https://www.rakeshtestingsite.com/">Website</a>
-    <p>© 2020 Rakesh Bahadure. Founder | Learner at rakeshtestingsitelearnings</p>
+    <p>© 2020 Rakesh Founder | Learner at rakeshtestingsitelearnings</p>
   </div>
   </body>
 </html>
