--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <div class="text-title">
       <h1>I am Rakesh.</h1>
+      <p><a href="html/blogs.html">Blogs</a></p>
     </div>
     <h2><p>I am a <span class="pro">project management consultant</span></p></h2>
 
