--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <!-- Nav Bar -->
 
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href=""><img src="images/Logo-Text-Ori.png" width="100" height="100" alt="Logo-mockup" align="left">Maaeend</a>
+        <a class="navbar-brand" href=""><img src="/images/Logo-Text-Ori.png" width="100" height="100" alt="Logo-mockup" align="left">Maaeend</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -134,12 +134,12 @@
   <!-- Press -->
 
   <section class="colored-section" id="press">
-    <img class="press-logo" src="images/PMP.png" alt="PMP-logo">
+    <img class="press-logo" src="/images/PMP.png" alt="PMP-logo">
     <!--<img class="press-logo" src="images/tnw.png" alt="tnw-logo">-->
-    <img class="press-logo" src="images/ATP-I-PMP.png" alt="PMI-ATP-I-PMP-logo">
+    <img class="press-logo" src="/images/ATP-I-PMP.png" alt="PMI-ATP-I-PMP-logo">
     <!--<img class="press-logo" src="images/mashable.png" alt="mashable-logo">-->
-<img class="press-logo" src="images/pl-new.png" alt="Power Skills">
-<img class="press-logo" src="images/mt-new.png" alt="Master Trainer">
+<img class="press-logo" src="/images/pl-new.png" alt="Power Skills">
+<img class="press-logo" src="/images/mt-new.png" alt="Master Trainer">
 
   </section>
 
@@ -209,7 +209,7 @@
 
           <h3 class="feature-title" align="left">FirstName LastName, Founder at Maaeend</h3>
 
-          <p><img src="images/raks.png" alt="raksprofile" align="right">FirstName is a passionate leadership, power skills and lean-agile project/program management trainer and consultant.<br>
+          <p><img src="/images/raks.png" alt="raksprofile" align="right">FirstName is a passionate leadership, power skills and lean-agile project/program management trainer and consultant.<br>
           He has over 20 years of experience in developing, leading, driving and managing complex software projects in various sectors such as Stock Market, Online Games (Websites and Mobiles), US Healthcare, Wireless, Floral and Learning & Development.<br>
           He is a PMI Certified PMP and PMI-ATP-Instructor-PMP. He holds internationally recognized Lean Six Sigma Black Belt & Lean Six Sigma Green Belt Certificates and was SAFe Agilist.<br>
           He is a certified Master Trainer (Masters Diploma in Training and Development) from Indian Academy of Training and Development (IATD), Chennai, India.<br>
