--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- CSS Stylesheets -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
 
   <!-- Font Awesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
@@ -309,7 +309,7 @@
 <!-- Whatsapp -->
 <i class="social-icon fab fa-whatsapp"></i>
 <p align="center">© Copyright 2021 Maaeend</p>
-    </div>
+</div>
 
   </footer>
 
