--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
+  <link rel="icon" href="/images/favicon.ico">
 
   <!-- CSS Stylesheets -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 
   <!-- Font Awesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
@@ -23,19 +24,18 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
 
-  <section class="colored-section" id="title">
-
+  <section class="white-section" id="title">
     <div class="container-fluid">
 
       <!-- Nav Bar -->
 
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href=""><img src="/images/Logo-Text-Ori.png" width="100" height="100" alt="Logo-mockup" align="left">Maaeend</a>
+        <!-- <a class="navbar-brand" href=""><img src="/images/Logo.png" width="300" height="150" alt="Logo-mockup" align="left"></a> -->
+        <img class="navbar-brand" src="images/Logo.png" width="300" height="150" alt="Logo-mockup" align="left">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -65,10 +65,9 @@
 
       <!-- Title -->
 
-      <div class="row" col-lg-6>
-        <!-- <p><h1>Maaeend's objective is to empower its partners.</h1><a href="blogs/blog.html">Blogs</a><a href="links/CognitiveFlexibility.html">NewWebsite</a></p> -->
-        <p><h1>Maaeend's objective is to empower its partners.</h1></p>
-        <!-- <p><img src="images/Logo.png" alt="Logo-mockup" height="75" width="75" align="left"></p> -->
+      <!-- <div class="row" col-lg-6> -->
+        <div>
+        <h1>Maaeend's objective is to empower its partners!</h1>
         </div>
 
   </section>
@@ -136,12 +135,9 @@
 
   <section class="colored-section" id="press">
     <img class="press-logo" src="/images/PMP.png" alt="PMP-logo">
-    <!--<img class="press-logo" src="images/tnw.png" alt="tnw-logo">-->
     <img class="press-logo" src="/images/ATP-I-PMP.png" alt="PMI-ATP-I-PMP-logo">
-    <!--<img class="press-logo" src="images/mashable.png" alt="mashable-logo">-->
-<img class="press-logo" src="/images/pl-new.png" alt="Power Skills">
-<img class="press-logo" src="/images/mt-new.png" alt="Master Trainer">
-
+    <img class="press-logo" src="/images/pl-new.png" alt="Power Skills">
+    <img class="press-logo" src="/images/mt-new.png" alt="Master Trainer">
   </section>
 
 
@@ -175,31 +171,7 @@
         </div>
       </div>
 </section>
-  <!-- <div data-role="page" id="pageone">
-  <div data-role="header">
-    <h1>Nested Collapsible Blocks</h1>
-  </div>
 
-  <div data-role="main" class="ui-content">
-    <div data-role="collapsible <h1>Click me - I'm collapsible!</h1>
-    <button class="collapsible">Open Section 2</button>
-
-    <div class="content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
-    </div>
-    <button class="collapsible">Open Section 3</button>
-
-    <div class="content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
-    </div>
-      <p>I'm the expanded content.</p>
-      <div data-role="collapsible">
-        <h1>Click me - I'm a nested collapsible block!</h1>
-        <p>I'm the expanded content in the nested collapsible block.</p>
-      </div>
-    </div>
-  </div>
-</div> -->
 
  <!-- About Us -->
   <section class="white-section" id="footer">
@@ -210,7 +182,7 @@
 
           <h3 class="feature-title" align="left">FirstName LastName, Founder at Maaeend</h3>
 
-          <p><img src="/images/raks.png" alt="raksprofile" align="right">FirstName is a passionate leadership, power skills and lean-agile project/program management trainer and consultant.<br>
+          <p align="left"><img src="/images/raks.png" alt="raksprofile" align="right">FirstName is a passionate leadership, power skills and lean-agile project/program management trainer and consultant.<br>
           He has over 20 years of experience in developing, leading, driving and managing complex software projects in various sectors such as Stock Market, Online Games (Websites and Mobiles), US Healthcare, Wireless, Floral and Learning & Development.<br>
           He is a PMI Certified PMP and PMI-ATP-Instructor-PMP. He holds internationally recognized Lean Six Sigma Black Belt & Lean Six Sigma Green Belt Certificates and was SAFe Agilist.<br>
           He is a certified Master Trainer (Masters Diploma in Training and Development) from Indian Academy of Training and Development (IATD), Chennai, India.<br>
@@ -248,7 +220,7 @@
   <section class="colored-section" id="cta">
 
     <div class="container-fluid">
-      <!--<h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>-->
+      <h3 class="big-heading">Connect with us, now!</h3>
            <!-- <h3 class="big-heading">+91 992 015 0666</h3>
            <h3 class="big-heading">rakesh@maaeend.com</h3> -->
 
@@ -263,54 +235,54 @@
 
     <footer class="white-section" id="footer">
     <div class="container-fluid">
-      <!-- <i class="social-icon fab fa-linkedin-in"></i>
-      <i class="social-icon fab fa-facebook-f"></i>
-      <i class="social-icon fab fa-twitter"></i>
-      <i class="social-icon fab fa-instagram"></i>
-      <i class="social-icon fas fa-envelope"></i> -->
-      <!-- Facebook -->
-<i class="social-icon fab fa-facebook-f"></i>
 
-<!-- Twitter -->
-<i class="social-icon fab fa-twitter"></i>
+  <!-- Facebook -->
+  <i class="social-icon fab fa-facebook-f"></i>
 
-<!-- Google -->
-<i class="social-icon fab fa-google"></i>
+  <!-- Twitter -->
+  <i class="social-icon fab fa-twitter"></i>
 
-<!-- Instagram -->
-<i class="social-icon fab fa-instagram"></i>
+  <!-- Google -->
+  <i class="social-icon fab fa-google"></i>
 
-<!-- Linkedin -->
-<i class="social-icon fab fa-linkedin-in"></i>
+  <!-- Instagram -->
+  <i class="social-icon fab fa-instagram"></i>
 
-<!-- Pinterest -->
-<i class="social-icon fab fa-pinterest"></i>
+  <!-- Linkedin -->
+  <i class="social-icon fab fa-linkedin-in"></i>
 
-<!-- Vkontakte -->
-<i class="social-icon fab fa-vk"></i>
+  <!-- Pinterest -->
+  <i class="social-icon fab fa-pinterest"></i>
 
-<!-- Stack overflow -->
-<i class="social-icon fab fa-stack-overflow"></i>
+  <!-- Youtube -->
+  <i class="social-icon fab fa-youtube"></i>
 
-<!-- Youtube -->
-<i class="social-icon fab fa-youtube"></i>
+  <!-- Whatsapp -->
+  <i class="social-icon fab fa-whatsapp"></i>
 
-<!-- Slack -->
-<i class="social-icon fab fa-slack-hash"></i>
+  <!-- Vkontakte -->
+  <!-- <i class="social-icon fab fa-vk"></i> -->
 
-<!-- Github -->
-<i class="social-icon fab fa-github"></i>
+  <!-- Stack overflow -->
+  <!-- <i class="social-icon fab fa-stack-overflow"></i> -->
 
-<!-- Dribbble -->
-<i class="social-icon fab fa-dribbble"></i>
+  <!-- Slack -->
+  <!-- <i class="social-icon fab fa-slack-hash"></i> -->
 
-<!-- Reddit -->
-<i class="social-icon fab fa-reddit-alien"></i>
+  <!-- Github -->
+  <!-- <i class="social-icon fab fa-github"></i> -->
 
-<!-- Whatsapp -->
-<i class="social-icon fab fa-whatsapp"></i>
-<p align="center">© Copyright 2021 Maaeend</p>
+  <!-- Dribbble -->
+  <!-- <i class="social-icon fab fa-dribbble"></i> -->
+
+  <!-- Reddit -->
+  <!-- <i class="social-icon fab fa-reddit-alien"></i> -->
+
+<div>
+  <p>© Copyright 2021 Maaeend</p>
 </div>
+
+    </div>
 
   </footer>
 
