--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
-  <link rel="icon" href="/images/favicon.ico">
+  <link rel="icon" href="favicon.ico">
 
   <!-- CSS Stylesheets -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
 
   <!-- Font Awesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
@@ -35,7 +35,7 @@
 
       <nav class="navbar navbar-expand-lg navbar-dark">
         <!-- <a class="navbar-brand" href=""><img src="/images/Logo.png" width="300" height="150" alt="Logo-mockup" align="left"></a> -->
-        <img class="navbar-brand" src="images/Logo.png" width="300" height="150" alt="Logo-mockup" align="left">
+        <img class="navbar-brand" src="/images/Logo.png" width="300" height="150" alt="Logo-mockup" align="left">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
             <span class="navbar-toggler-icon"></span>
         </button>
