--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <!-- Nav Bar -->
 
-      <nav class="navbar navbar-expand-lg navbar-dark">
+      <nav class="navbar navbar-expand-lg navbar-light">
         <!-- <a class="navbar-brand" href=""><img src="/images/Logo.png" width="300" height="150" alt="Logo-mockup" align="left"></a> -->
         <img class="navbar-brand" src="/images/Logo.png" width="300" height="150" alt="Logo" align="left">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
