--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <!-- https://getbootstrap.com/ -->
     <link rel="stylesheet" href="/css/tooplate-style.css" />
-      <link rel="icon" href="/img/favicon.ico">
+      <link rel="icon" href="/img/favicon.ico" />
   </head>
 
   <body>
