--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ He has conducted 13 workshops on PMP, 2 on Leadership and 1 on Business Communic
           Copyright &copy; 2021 Maaeend
         </p>
         <div class="col-md-2 col-sm-12 scrolltop">
-          <div class="scroll icon"><i class="fas fa-5x fa-angle-up"></i></div>
+          <div class="scroll icon"><i class="fa fa-4x fa-angle-up"></i></div>
         </div>
       </div>
     </footer>
