--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             Maaeend provides training and workshops on PMP Certification Exam Preparation, CAPM Certification Exam Preparation, and Lean Six Sigma.
           </p>
           <p>
-            It provides training in everything power skills including Wicked Problem Solving, Mindset Development, and Conversational Intelligence.
+            It provides training in everything power skills including Complex Problem Solving, Mindset Development, and Conversational Intelligence.
           </p>
         </section>
       </div>
