--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             Maaeend provides training and workshops on PMP Certification Exam Preparation, CAPM Certification Exam Preparation, and Lean Six Sigma.
           </p>
           <p>
-            It provides training in everything power skills including Complex Problem Solving, Mindset Development, and Conversational Intelligence.
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna.
           </p>
         </section>
       </div>
