--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600"
     />
+    <link href=“https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css”/>
     <!-- https://fonts.google.com/specimen/Open+Sans -->
     <link rel="stylesheet" href="/css/all.min.css" />
     <!-- https://fontawesome.com/ -->
@@ -109,7 +110,8 @@
       <div class="row tm-features-row">
         <section class="col-md-6 col-sm-12 tm-feature-block">
           <header class="tm-feature-header">
-            <i class="fas fa-5x fa-anchor tm-feature-icon"></i>
+<!--             <i class="fas fa-5x fa-anchor tm-feature-icon"></i> -->
+            <i class="fa fa-5x fa-anchor tm-feature-icon"></i>
             <h3 class="tm-feature-h">Consultancy</h3>
           </header>
           <p>
