--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         </div>
         <div class="right box">
             <div class="topic">Get In Touch With Us</div>
-            <form action="main.php" method="POST">
+            <form action="/css/main.php" method="POST">
                 <input type="text" placeholder="Enter email address" name="email" required>
                 <input type="text" placeholder="Enter Number" name="number">
                 <input type="text" placeholder="Enter message" name="message" required>
@@ -269,6 +269,3 @@
   <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
   </body>
 </html>
-
-
-
