--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
                     <h3 class="tm-feature-h">Consultancy</h3>
                 </header>
                 <p>
-                    Maaeend provides end-to-end consultancy services in traditional project management, lean-agile project management, and organizational agility.
+                    Maaeend provides end-to-end consultancy services in traditional project management, and lean-agile project management.
                 </p>
                 <p>
-                    It provides consultancy in goal setting, productivity enhancing, potential exploiting and performance improving.
+                    We also provide consultancy in organizational agility for improving productivity, exploiting potential, and enhancing performance.
                 </p>
             </section>
             <section class="tm-feature-block">
@@ -133,7 +133,7 @@
                 </header>
                 <p>
                     Maaeend is a training and consultancy platform. We at Maaeend, believe in the power of an individual. Our trainings/workshops are designed to empower participants, making learning fun and accessible. They are structured, flexible, enabling participants to succeed. 
-                    We also provide consultancy in organizational agility for improving productivity, exploiting potential, and enhancing performance.
+                    
                 </p>
             </div>
         </div>
