--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
                 <p>
                     Maaeend provides training and workshops on PMP Certification Exam Preparation, CAPM Certification Exam Preparation, and Lean Six Sigma.
                 </p>
+                <p>
+                    Maaeend also provides training and workshops on powerskills including primal learning, solving complex/wicked problems, and converstaional intelligence.
+                </p>
                 
             </section>
         </div>
