--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <!-- Home image -->
     <section class="tm-banner-section" id="tmHomeSection">
-        <img src="/img/Home.jpeg" alt="Image" />
+        <img src="/img/Art-1.png" alt="Image" />
     </section>
 
     <!-- Services -->
