--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <h3 class="tm-feature-h">Training</h3>
                 </header>
                 <p>
-                    Maaeend provides training and workshops on PMP Certification Exam Preparation, CAPM Certification Exam Preparation, Lean Six Sigma, and PowerSkills including primal learning, solving complex/wicked problems, converstaional intelligence.
+                    Maaeend provides training and workshops on PMP Certification Exam Preparation, CAPM Certification Exam Preparation, Lean Six Sigma, and PowerSkills including primal learning, solving complex/wicked problems, conversational intelligence.
                 </p>
                 
                 
