--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <h3 class="tm-feature-h">Consultancy</h3>
                 </header>
                 <p>
-                    Maaeend provides end-to-end consultancy services in traditional project management, lean-agile project management, and in organizational agility for improving productivity, exploiting potential, and enhancing performance.
+                    Maaeend provides consultancy services in project management, program management, operations management, and in organizational agility for improving productivity, exploiting potential, & enhancing performance using classical and lean-agile management methodologies.
                 </p>
              
             </section>
@@ -147,7 +147,7 @@
                     <h2 class="tm-founder-about-header">About Founder</h2>
                     </header>
                     <p>
-                        FirstName is a passionate leadership, power skills and lean-agile project/program management trainer and consultant. He has over 20 years of experience in developing, leading, driving and managing complex software projects in 
+                        Rakesh is a passionate leadership, power skills and lean-agile project/program management trainer and consultant. He has over 20 years of experience in developing, leading, driving and managing complex software projects in 
                         various sectors such as Stock Market, Online Games (Websites and Mobiles), US Healthcare, Wireless, Floral and Learning & Development.
                     </p>
                     
@@ -175,12 +175,12 @@
         <div class="top">
             <img src="/img/user.jpeg" alt="Image" />
             <div class="name">
-                <!-- Rahul Jain - PMP® - SSGB-->
+                Rahul Jain - PMP® - SSGB
                 <h3>comment</h3> 
                 <p>comment</p></p>
             </div> 
         </div>
-        <p class="testimonial-text"><i class="fas fa-quote-left"></i> Thank you FirstName Sir for providing training and guidance for PMP exam. That was most valuable knowledge during my PMP preparation. It was clear and very well organized and interactive that I could learn and gain knowledge from all aspects of project management from other domains as well. And I was able to relate my understanding developed with my current organization structure, roles and responsibilities. I had passed my exam last week. I will see if i can get more opportunities to learn from you. <i class="fas fa-quote-right"></i></p>
+        <p class="testimonial-text"><i class="fas fa-quote-left"></i> Thank you Rakesh Sir for providing training and guidance for PMP exam. That was most valuable knowledge during my PMP preparation. It was clear and very well organized and interactive that I could learn and gain knowledge from all aspects of project management from other domains as well. And I was able to relate my understanding developed with my current organization structure, roles and responsibilities. I had passed my exam last week. I will see if i can get more opportunities to learn from you. <i class="fas fa-quote-right"></i></p>
     </div>
 
     <div class="carousel-cell">
@@ -191,8 +191,8 @@
             <p>comment</p> 
         </div> 
     </div>
-    <p class="testimonial-text"><i class="fas fa-quote-left"></i> PMP training sessions by FirstName are very engaging & interactive. He is technically sound and very soft spoken person with a pleasant personality and positivity. He shares a strong relationship with his students due to his great interpersonal skills. His way of clarifying my questions in all knowledge areas of project management really helped. His focused & encouraging attitude helped me to give my exam with conceptual clarity & confidence. I’d definitely recommend him for PMP training and get certified. <i class="fas fa-quote-right"></i></p>
-            <!-- <em>Nitin C, Finance Transformation</em> -->
+    <p class="testimonial-text"><i class="fas fa-quote-left"></i> PMP training sessions by Rakesh are very engaging & interactive. He is technically sound and very soft spoken person with a pleasant personality and positivity. He shares a strong relationship with his students due to his great interpersonal skills. His way of clarifying my questions in all knowledge areas of project management really helped. His focused & encouraging attitude helped me to give my exam with conceptual clarity & confidence. I’d definitely recommend him for PMP training and get certified. <i class="fas fa-quote-right"></i></p>
+            <em>Nitin C, Finance Transformation</em>
     </div>
   
   
@@ -208,7 +208,7 @@
                     <div class="topic">Contact us</div>
                         <div class="phone">
                         <i class="fa fa-phone fa-2x" aria-hidden="true"></i>
-                        <a>+91 1111111111</a>
+                        <a>+91 xxxxxxxxxx</a>
                         </div>
                         <div class="email">
                         <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
