--- a/index.html
+++ b/index.html
@@ -187,12 +187,13 @@
     <div class="top">
         <img src="/img/user.jpeg" alt="Image" />
         <div class="name">
-            <h3>comment</h3> 
-            <p>comment</p> 
+          Nitin C, Finance Transformation
+<!--             <h3>comment</h3> 
+            <p>comment</p>  -->
         </div> 
     </div>
     <p class="testimonial-text"><i class="fas fa-quote-left"></i> PMP training sessions by Rakesh are very engaging & interactive. He is technically sound and very soft spoken person with a pleasant personality and positivity. He shares a strong relationship with his students due to his great interpersonal skills. His way of clarifying my questions in all knowledge areas of project management really helped. His focused & encouraging attitude helped me to give my exam with conceptual clarity & confidence. I’d definitely recommend him for PMP training and get certified. <i class="fas fa-quote-right"></i></p>
-            <em>Nitin C, Finance Transformation</em>
+<!--             <em>Nitin C, Finance Transformation</em> -->
     </div>
   
   
